--- a/docroot/modules/custom/bazaar_voice/config/install/bazaar_voice.settings.yml
+++ b/docroot/modules/custom/bazaar_voice/config/install/bazaar_voice.settings.yml
@@ -14,7 +14,7 @@ pdp_rating_reviews: false
 show_location_filter: true
 myaccount_rating_reviews: false
 myaccount_reviews_limit: 100
-write_review_submission: false
+write_review_submission: true
 write_review_tnc: '/terms-and-conditions'
 write_review_guidlines: '/writing-guidelines'
 comment_submission: true
