--- a/docroot/modules/custom/bazaar_voice/config/install/bazaar_voice.settings.yml
+++ b/docroot/modules/custom/bazaar_voice/config/install/bazaar_voice.settings.yml
@@ -1,4 +1,4 @@
-api_base_url: 'https://stg.api.bazaarvoice.com'
+api_base_url: ''
 conversations_apikey: ''
 shared_secret_key: ''
 max_age: 1
@@ -15,10 +15,10 @@ show_location_filter: true
 myaccount_rating_reviews: false
 myaccount_reviews_limit: 100
 write_review_submission: true
-write_review_tnc: '/terms-and-conditions'
-write_review_guidlines: '/writing-guidelines'
+write_review_tnc: ''
+write_review_guidlines: ''
 comment_submission: true
-comment_form_tnc: '/terms-and-conditions'
+comment_form_tnc: ''
 bv_content_types: 'Products,Comments,Authors'
 screen_name_min_length: 4
 comment_box_min_length: 20
