--- a/docroot/modules/custom/alshaya_acm_product_category/modules/alshaya_super_category/alshaya_super_category.services.yml
+++ b/docroot/modules/custom/alshaya_acm_product_category/modules/alshaya_super_category/alshaya_super_category.services.yml
@@ -15,7 +15,7 @@ services:
       - '@current_route_match'
       - '@database'
       - '@config.factory'
-      - '@path.alias_manager'
+      - '@path_alias.manager'
       - '@alshaya_acm_product.category_helper'
       - '@module_handler'
       - '@theme.manager'
