--- a/docroot/modules/react/alshaya_react/alshaya_react.libraries.yml
+++ b/docroot/modules/react/alshaya_react/alshaya_react.libraries.yml
@@ -2,8 +2,8 @@ react:
   version: 1.x
   header: true
   js:
-    js/react.production.min.js: {preprocess: false}
-    js/react-dom.production.min.js: {preprocess: false}
+    js/react.production.min.js: {preprocess: false, attributes: { async: true } }
+    js/react-dom.production.min.js: {preprocess: false, attributes: { async: true } }
   dependencies:
     - core/drupal
     - alshaya_react/react_pollyfill
