--- a/tests/behat/templates/variables/brands/bbw/env/uat/markets/ae/ae.yml
+++ b/tests/behat/templates/variables/brands/bbw/env/uat/markets/ae/ae.yml
@@ -1,5 +1,6 @@
 variables:
   spc_product_listing_page: '/shop-shop-fragrance/'
+  spc_pdp_page: '/buy-paraffin-pomegranate-hand-cream.html/'
   spc_basket_page: '/shop-shop-fragrance/'
   product_listing_page_url: '/shop-shop-fragrance/'
   spc_single_product_detail_page_coupon: '/buy-pink-gem-pocketbac-holder.html/'
