--- a/tests/behat/templates/variables/brands/bbw/env/uat/markets/sa/sa.yml
+++ b/tests/behat/templates/variables/brands/bbw/env/uat/markets/sa/sa.yml
@@ -3,6 +3,7 @@ variables:
   product_listing_page_url: "/#query=fragrance/"
   spc_product_listing_page: '/#query=fragrance/'
   spc_basket_page: '/#query=fragrance/'
+  spc_pdp_page: ''
   governorate: ''
   spc_single_product_detail_page_coupon: '/buy-pink-gem-pocketbac-holder.html/'
   spc_multiple_product_detail_page_coupon: '/buy-japanese-cherry-blossom-bath-fizzy.html/'
