--- a/tests/behat/templates/variables/brands/fl/env/uat/markets/kw/kw.yml
+++ b/tests/behat/templates/variables/brands/fl/env/uat/markets/kw/kw.yml
@@ -1,4 +1,5 @@
 variables:
   spc_product_listing_page: '/shop-kids/8-years/clothing/#query=socks/'
   spc_basket_page: '/shop-kids/8-years/clothing/#query=socks/'
+  spc_pdp_page: ''
   product_listing_page_url: '/shop-kids/8-years/clothing/#query=socks/'
