--- a/tests/behat/templates/variables/brands/fl/env/uat/markets/sa/sa.yml
+++ b/tests/behat/templates/variables/brands/fl/env/uat/markets/sa/sa.yml
@@ -2,6 +2,7 @@ variables:
   url_product_page: 'buy-adidas-nmd-r1-grade-school-shoes-white-grey-white.html'
   product_listing_page_url: "/shop-default-category/collections/"
   spc_product_listing_page: '/shop-default-category/collections/'
+  spc_pdp_page: ''
   spc_basket_page: '/shop-default-category/collections/'
   new_checkout_enabled: TRUE
   np_plp_product_page: '/buy-adidas-originals-3-pack-trefoil-crew-socks-black-white.html/'
