--- a/tests/behat/templates/variables/brands/hm/env/prod/markets/sa/sa.yml
+++ b/tests/behat/templates/variables/brands/hm/env/prod/markets/sa/sa.yml
@@ -3,4 +3,5 @@ variables:
   product_listing_page_url: "/shop-baby/baby-boys/accessories/"
   spc_product_listing_page: '/shop-baby/baby-boys/accessories//'
   spc_basket_page: '/shop-baby/baby-boys/accessories/'
+  spc_pdp_page: ''
   governorate: ''
