--- a/tests/behat/templates/variables/brands/hm/env/uat/markets/ae/ae.yml
+++ b/tests/behat/templates/variables/brands/hm/env/uat/markets/ae/ae.yml
@@ -3,3 +3,4 @@ variables:
   product_listing_page_url: '/shop-lingerie/'
   spc_product_listing_page: '/shop-lingerie/'
   spc_basket_page: '/shop-lingerie/'
+  spc_pdp_page: ''
