--- a/tests/behat/templates/variables/brands/hm/env/uat/markets/sa/sa.yml
+++ b/tests/behat/templates/variables/brands/hm/env/uat/markets/sa/sa.yml
@@ -3,4 +3,5 @@ variables:
   product_listing_page_url: "/shop-divided/new-arrivals/"
   spc_product_listing_page: '/shop-divided/new-arrivals/'
   spc_basket_page: '/#query=shirt/'
+  spc_pdp_page: ''
   spc_promotion_listing_page: '/buy-denim-shorts-slim-fit-denim-blue.html/'
