--- a/tests/behat/templates/variables/brands/mc/env/prod/markets/ae/ae.yml
+++ b/tests/behat/templates/variables/brands/mc/env/prod/markets/ae/ae.yml
@@ -5,4 +5,5 @@ variables:
   spc_promotion_listing_page: '/buy-little-star-top-and-leggings-set.html/'
   np_plp_product_page: '/buy-multi-coloured-spot-zip-through-hoody.html/'
   np_plp_page: '/shop-baby-clothing/new-arrivals/'
+  spc_pdp_page: ''
   new_pdp_enabled: TRUE
