--- a/tests/behat/templates/variables/brands/mc/env/prod/markets/kw/kw.yml
+++ b/tests/behat/templates/variables/brands/mc/env/prod/markets/kw/kw.yml
@@ -2,6 +2,7 @@ variables:
   spc_product_listing_page: '/shop-baby-clothing/new-arrivals/'
   spc_basket_page: '/shop-baby-clothing/new-arrivals/'
   product_listing_page_url: "/shop-baby-clothing/new-arrivals/"
+  spc_pdp_page: ''
   np_plp_product_page: '/buy-white-peter-pan-collar-t-shirt.html/'
   np_plp_page: '/shop-toddler-clothing/new-arrivals/new-arrivals-for-girls/'
   new_pdp_enabled: TRUE
