--- a/tests/behat/templates/variables/brands/mc/env/prod/markets/sa/sa.yml
+++ b/tests/behat/templates/variables/brands/mc/env/prod/markets/sa/sa.yml
@@ -4,5 +4,6 @@ variables:
   spc_basket_page: '//shop-toddler-clothing/new-arrivals/new-arrivals-for-boys/'
   product_listing_page_url: '/shop-toys/activity-toys/cars-trains-construction-toys/'
   np_plp_product_page: '/buy-green-polo-shirt.html/'
+  spc_pdp_page: ''
   np_plp_page: '/shop-toddler-clothing/new-arrivals/new-arrivals-for-boys/'
   new_pdp_enabled: TRUE
