--- a/tests/behat/templates/variables/brands/mc/env/uat/markets/ae/ae.yml
+++ b/tests/behat/templates/variables/brands/mc/env/uat/markets/ae/ae.yml
@@ -1,4 +1,5 @@
 variables:
   spc_product_listing_page: '/shop-baby-clothing/baby-newborn-18-months/'
   spc_basket_page: '/shop-baby-clothing/baby-newborn-18-months/'
+  spc_pdp_page: ''
   product_listing_page_url: "/shop-baby-clothing/baby-newborn-18-months/"
