--- a/tests/behat/templates/variables/brands/mc/env/uat/markets/kw/kw.yml
+++ b/tests/behat/templates/variables/brands/mc/env/uat/markets/kw/kw.yml
@@ -1,5 +1,6 @@
 variables:
   spc_product_listing_page: '/shop-clothing/newborn/newborn-boys/'
   spc_basket_page: '/shop-clothing/newborn/newborn-boys/'
+  spc_pdp_page: ''
   product_listing_page_url: '/shop-clothing/newborn/newborn-boys/'
   spc_plp_add_to_cart_single: '/shop-clothing/newborn/newborn-boys/'
