--- a/tests/behat/templates/variables/brands/mc/env/uat/markets/sa/sa.yml
+++ b/tests/behat/templates/variables/brands/mc/env/uat/markets/sa/sa.yml
@@ -1,4 +1,5 @@
 variables:
   spc_product_listing_page: '/shop-premium-brands/juicy-couture/'
   spc_basket_page: '/shop-premium-brands/juicy-couture/'
+  spc_pdp_page: ''
   product_listing_page_url: "/shop-premium-brands/juicy-couture/"
