--- a/tests/behat/templates/variables/brands/pb/env/uat/markets/ae/ae.yml
+++ b/tests/behat/templates/variables/brands/pb/env/uat/markets/ae/ae.yml
@@ -2,3 +2,4 @@ variables:
   product_listing_page_url: '/shop-furniture/living-room/armchairs/'
   spc_product_listing_page: '/shop-furniture/living-room/armchairs/'
   spc_basket_page: '/shop-furniture/living-room/armchairs/'
+  spc_pdp_page: ''
