--- a/tests/behat/templates/variables/brands/pb/env/uat/markets/sa/sa.yml
+++ b/tests/behat/templates/variables/brands/pb/env/uat/markets/sa/sa.yml
@@ -1,4 +1,5 @@
 variables:
   product_listing_page_url: '/shop-furniture/living-room/all-living-room/'
+  spc_pdp_page: '/buy-hydrocotton-quick-drying-towels.html/'
   spc_product_listing_page: '/shop-furniture/living-room/all-living-room/'
   spc_basket_page: '/shop-furniture/living-room/all-living-room/'
