--- a/tests/behat/templates/variables/brands/tbs/env/prod/markets/kw/kw.yml
+++ b/tests/behat/templates/variables/brands/tbs/env/prod/markets/kw/kw.yml
@@ -3,3 +3,4 @@ variables:
   product_listing_page_url: '/shop-bestsellers/'
   spc_product_listing_page: '/shop-bestsellers/'
   spc_basket_page: '/shop-bestsellers/'
+  spc_pdp_page: ''
