--- a/tests/behat/templates/variables/brands/vs/env/uat/markets/ae/ae.yml
+++ b/tests/behat/templates/variables/brands/vs/env/uat/markets/ae/ae.yml
@@ -2,3 +2,4 @@ variables:
   spc_product_listing_page: '/victorias-secret/shop-bras/'
   spc_basket_page: '/victorias-secret/shop-bras/'
   product_listing_page_url: '/victorias-secret/shop-bras/'
+  spc_pdp_page: ''
