--- a/tests/behat/templates/variables/brands/vs/env/uat/markets/sa/sa.yml
+++ b/tests/behat/templates/variables/brands/vs/env/uat/markets/sa/sa.yml
@@ -1,5 +1,6 @@
 variables:
   spc_product_listing_page: '/pink/shop-sport/'
+  spc_pdp_page: ''
   spc_basket_page: '/pink/shop-sport/'
   product_listing_page_url: '/pink/shop-sport/'
   spc_promotion_listing_page: '/buy-any-3-and-get-20/'
