--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@
 # @see https://github.com/travis-ci/travis-ci/issues/6842
 sudo: required
 language: php
-dist: trusty
+dist: xenial
 
 matrix:
   fast_finish: true
@@ -97,6 +97,7 @@ before_install:
   - git config --global github.accesstoken "${GITHUB_OAUTH_TOKEN}"
   - composer validate --no-check-all --ansi
   - source ${BUILD_DIR}/blt/scripts/delete_composer_caches "${BUILD_DIR}"
+  - echo "extension = memcached.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
   # There seems to be stronger rate limiting applied to Github downloads
   # that forces us to retry composer install several times.
   # Symptom is a Github download ending with 404 while the URL is valid.
